# CppProjectTemplate

./: CMakeLists.txt  README.md  main.cpp
Core/: CMakeLists.txt  app.cpp  app.h
